crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A vector of bits
 *
 * # Examples
 * ```C
 * SPBitVec vec = sp_bit_vec_new(8);
 * sp_bit_vec_set(vec, 5, true);
 * sp_bit_vec_free(vec);
 * ```
 */
typedef struct SPBitVec SPBitVec;
/**
 * A C-wrapper for grid containing codepage 437 characters.
 *
 * The encoding is currently not enforced.
 *
 * # Examples
 *
 * ```C
 * Cp437Grid grid = sp_cp437_grid_new(4, 3);
 * sp_cp437_grid_fill(grid, '?');
 * sp_cp437_grid_set(grid, 0, 0, '!');
 * sp_cp437_grid_free(grid);
 * ```
 */
typedef struct SPCp437Grid SPCp437Grid;
/**
 * Represents a span of memory (`&mut [u8]` ) as a struct usable by C code.
 *
 * You should not create an instance of this type in your C code.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - accesses to the memory pointed to with `start` is never accessed outside `length`
 * - the lifetime of the `CByteSlice` does not outlive the memory it points to, as described in
 *   the function returning this type.
 * - an instance of this created from C is never passed to a consuming function, as the rust code
 *   will try to free the memory of a potentially separate allocator.
 */
typedef struct SPByteSlice {
    /**
     * The start address of the memory
     */
    uint8_t *start;
    /**
     * The amount of memory in bytes
     */
    size_t length;
} SPByteSlice;
/**
 * Clones a `SPCp437Grid`.
 *
 * Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_cp437_grid_free`.
 */
struct SPCp437Grid *sp_cp437_grid_clone(const struct SPCp437Grid *this_);
/**
 * Sets the value of all cells in the `SPCp437Grid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `value`: the value to set all cells to
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 * - `this` is not written to or read from concurrently
 */
void sp_cp437_grid_fill(struct SPCp437Grid *this_, uint8_t value);
/**
 * Deallocates a `SPCp437Grid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `SPCommand`
 */
void sp_cp437_grid_free(struct SPCp437Grid *this_);
/**
 * Gets the current value at the specified position.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 * - `x` and `y`: position of the cell to read
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 * - `this` is not written to concurrently
 */
uint8_t sp_cp437_grid_get(const struct SPCp437Grid *this_, size_t x, size_t y);
/**
 * Gets the height of the `SPCp437Grid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 */
size_t sp_cp437_grid_height(const struct SPCp437Grid *this_);
/**
 * Loads a `SPCp437Grid` with the specified dimensions from the provided data.
 *
 * Will never return NULL.
 *
 * # Panics
 *
 * When the provided `data_length` is not sufficient for the `height` and `width`
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory location of at least `data_length`
 *   bytes in size.
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_cp437_grid_free`.
 */
struct SPCp437Grid *sp_cp437_grid_load(size_t width,
                                       size_t height,
                                       const uint8_t *data,
                                       size_t data_length);
/**
 * Creates a new `SPCp437Grid` with the specified dimensions.
 *
 * returns: `SPCp437Grid` initialized to 0.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_cp437_grid_free`.
 */
struct SPCp437Grid *sp_cp437_grid_new(size_t width,
                                      size_t height);
/**
 * Sets the value of the specified position in the `SPCp437Grid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `x` and `y`: position of the cell
 * - `value`: the value to write to the cell
 *
 * returns: old value of the cell
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBitVec`
 * - `this` is not written to or read from concurrently
 */
void sp_cp437_grid_set(struct SPCp437Grid *this_,
                       size_t x,
                       size_t y,
                       uint8_t value);
/**
 * Gets an unsafe reference to the data of the `SPCp437Grid` instance.
 *
 * Will never return NULL.
 *
 * ## Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 * - the returned memory range is never accessed after the passed `SPCp437Grid` has been freed
 * - the returned memory range is never accessed concurrently, either via the `SPCp437Grid` or directly
 */
struct SPByteSlice sp_cp437_grid_unsafe_data_ref(struct SPCp437Grid *this_);
/**
 * Gets the width of the `SPCp437Grid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPCp437Grid`
 */
size_t sp_cp437_grid_width(const struct SPCp437Grid *this_);